--- a/css/styles.css
+++ b/css/styles.css
@@ -35,11 +35,11 @@ button:hover {
   color: black;
   font-size: 30px;
   padding: 10px 20px;
-  width: 100px;
+  width: 15%;
   height: 60px;
-  position: fixed;
-  left: 1250px;
-  margin-top: 1.15%;
+  margin-left: 80%;
+  position: relative;
+  margin-top:1%;
 }
 input {
   border: 5px solid #D9FFF8;
@@ -48,11 +48,10 @@ input {
   color: black;
   font-size: 30px;
   padding: 10px 20px;
-  position: fixed;
-  left: 700px;
-  width:450px;
+  margin-left: 15%;
+  width:50%;
   height: 20px;
-  margin-top: 1.3%;
+  margin-top: 3.5%;
 }
 .list {
   border: 5px dashed  #D9FFF8;
@@ -73,16 +72,44 @@ input {
   text-align: center;
   font-size: 40px;
 }
+
 ul li {
   border: 3px solid black;
   background-color: #D9FFF8;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 1%;
-  width: 1000px;
-  text-align: left;
-  font-size: 30px;
+  width: 90%;
+  height: 75px;
  list-style: none;
- margin-bottom: 1%;
- padding-left: 10px;
+ margin-bottom: 2%;
+ margin-top: 2%;
+ margin-left: auto;
+ margin-right: auto;
+}
+ul li:hover {
+  background: #F4C6DB;
+}
+.priority {
+  font-size: 50px;
+  position:relative;
+  margin-left: 2%;
+  margin-top: 3%;
+}
+.item{
+  text-align: center;
+  color: black;
+  font-size: 40px;
+  position: relative;
+  margin-top: -10px;
+}
+.completed{
+  font-size: 50px;
+  position: relative;
+  margin-left: 85%;
+  margin-top: -20px;
+}
+
+.remove {
+  font-size: 50px;
+  position: relative;
+  margin-left: 93%;
+  margin-top: -80px;
 }
