--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ ul li:hover {
   margin-bottom: auto;
   margin-left: 2%;
   margin-right: auto;
-  padding: 0 630px 0 0;
+  padding: 0 65% 0 0;
 }
 
 .completed{
